--- a/index.html
+++ b/index.html
@@ -29,19 +29,21 @@
           <li class="navbar__item">
             <a class="navbar__link" href="">РАБОТЫ</a>
           </li>
-          <li class="navbar-item">
+          <li class="navbar__item">
             <a class="navbar__link" href="">ПРОЦЕСС</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar-link" href="">КОНТАКТЫ</a>
+            <a class="navbar__link" href="">КОНТАКТЫ</a>
           </li>
         </ol>
       </div>
 
       <div class="content">
         <h1 class="content__title">Дизайн и верстка</h1>
-        <div>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
-          "рыбой" для текстов на латинице с начала XVI века.</div>
+        <p class="content__description">Lorem Ipsum - это текст-"рыба", часто используемый в печати и <br>вэб-дизайне.
+          Lorem
+          Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века.</p>
         <a class="content__link" href="">НАПИСАТЬ МНЕ</a>
       </div>
 
