закончили работу над проектом

--- a/index.html
+++ b/index.html
@@ -50,6 +50,105 @@
     </div>
   </header>
 
+  <main class="main">
+
+    <section class="about section">
+      <div class="container container--sm">
+        <h2 class="about__title section__title">Обо мне</h2>
+        <p class="about__description section__description">Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+          <br>
+          вэб-дизайне. Lorem Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века.
+        </p>
+      </div>
+    </section>
+
+    <section class="experience">
+      <h2 class="experience__title visually-hidden">Мой опыт веб-разработки</h2>
+      <div class="experience__container container">
+        <div class="experience-item">
+          <div class="experience-item__description">
+            <p class="experience-item__number">40+</p>
+            <p class="experience-item__text">проектов</p>
+          </div>
+          <div class="experience-item__image">
+            <img src="assets/img/project.svg" alt="some image">
+          </div>
+        </div>
+        <div class="experience-item">
+          <div class="experience-item__description">
+            <p class="experience-item__number">40+</p>
+            <p class="experience-item__text">проектов</p>
+          </div>
+          <div class="experience-item__image">
+            <img src="assets/img/project.svg" alt="some image">
+          </div>
+        </div>
+        <div class="experience-item">
+          <div class="experience-item__description">
+            <p class="experience-item__number">40+</p>
+            <p class="experience-item__text">проектов</p>
+          </div>
+          <div class="experience-item__image">
+            <img src="assets/img/project.svg" alt="some image">
+          </div>
+        </div>
+        <div class="experience-item">
+          <div class="experience-item__description">
+            <p class="experience-item__number">40+</p>
+            <p class="experience-item__text">проектов</p>
+          </div>
+          <div class="experience-item__image">
+            <img src="assets/img/project.svg" alt="some image">
+          </div>
+        </div>
+        <div class="experience-item">
+          <div class="experience-item__description">
+            <p class="experience-item__number">40+</p>
+            <p class="experience-item__text">проектов</p>
+          </div>
+          <div class="experience-item__image">
+            <img src="assets/img/project.svg" alt="some image">
+          </div>
+        </div>
+        <div class="experience-item">
+          <div class="experience-item__description">
+            <p class="experience-item__number">40+</p>
+            <p class="experience-item__text">проектов</p>
+          </div>
+          <div class="experience-item__image">
+            <img src="assets/img/project.svg" alt="some image">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="process section">
+      <div class="process__container container container--sm">
+        <h2 class="process__title section__title">Как я работаю</h2>
+        <p class="process__description section__description">Lorem Ipsum - это текст-"рыба", часто используемый в печати
+          и вэб-дизайне. Lorem
+          Ipsum является стандартной
+          "рыбой" для текстов на латинице с начала XVI века.</p>
+      </div>
+
+      <div class="container">
+        <iframe class="process__video" width="560" height="315" src="https://www.youtube.com/embed/W1vloggWBNE"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__name">Иванов Иван</div>
+      <div class="footer__copyright">(с) 2018. Все права защищены.</div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
